--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .main-title { text-align: center; color: #58a6ff; margin: 30px 0 10px; font-size: 3em; font-weight: 700; }
     .subtitle { text-align: center; color: #8b949e; margin-bottom: 30px; font-size: 1.3em; }
     .container { display: flex; flex-wrap: wrap; gap: 30px; max-width: 1600px; margin: 0 auto; padding: 0 20px; }
-    .chart-area { flex: 3; min-width: 700px; height: 800px; background: #161b22; border-radius: 16px; padding: 25px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); overflow-x: hidden; }
+    .chart-area { flex: 3; min-width: 700px; height: 800px; background: #161b22; border-radius: 16px; padding: 25px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); }
     .sidebar { flex: 1; min-width: 340px; background: #161b22; padding: 25px; border-radius: 16px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); overflow-y: auto; max-height: 800px; }
     .status-badge { font-size: 2em; margin: 0 0 30px; padding: 15px; border-radius: 16px; text-align: center; font-weight: 700; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
     .price-item, .gork-item { margin: 20px 0; padding: 18px; border-radius: 12px; background: #21262d; transition: all 0.2s; }
@@ -27,10 +27,12 @@
     .summary-controls { margin-bottom: 10px; text-align: center; }
     .summary-controls button { padding: 6px 12px; margin: 0 5px; background: #58a6ff; color: white; border: none; border-radius: 6px; cursor: pointer; }
     .summary-controls button:hover { background: #1f6feb; }
-    .chart-info { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; font-size: 0.95em; line-height: 1.5; }
-    .chart-info h4 { margin: 0 0 10px; color: #58a6ff; }
-    .chart-info p { margin: 8px 0; }
-    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; overflow-x: auto; } }
+    .phase-bar { height: 60px; width: 100%; margin: 0 0 25px 0; border-radius: 16px; overflow-x: auto; background: #1f2937; display: flex; box-shadow: 0 6px 25px rgba(0,0,0,0.5); white-space: nowrap; }
+    .phase-segment { min-width: 80px; flex: 0 0 auto; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; font-size: 0.9em; transition: all 0.3s; border: 1px solid transparent; }
+    .phase-segment:hover { transform: scale(1.05); box-shadow: inset 0 0 15px rgba(255,255,255,0.4); }
+    .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; transform: scale(1.08); }
+    .euphoria { color: #ff6b6b !important; font-weight: 900; }
+    @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
 <body>
@@ -64,16 +66,6 @@
         <div id="summaryContent">
           <div class="loading">Loading today's summary...</div>
         </div>
-      </div>
-
-      <!-- Chart Description - next to daily summary -->
-      <div class="chart-info">
-        <h4>Chart Methodology & Why It's Accurate</h4>
-        <p><strong>Data Sources</strong><br>
-        The Flow Cycle Index Dashboard was developed through an iterative process that aggregated data from multiple financial and sentiment sources to create a unified predictive tool. We started with historical crypto cycle data from CoinGecko (BTC, ETH, Solana, BNB prices and volume), interpolating daily points for smoothness, and layered in metals charts (gold/silver from Google searches and APIs like Yahoo Finance) as macroeconomic indicators. To enhance sentiment analysis, we incorporated the Fear and Greed Index for emotional market gauges, Google Trends searches for "crypto" and related terms to measure public interest spikes, the Altseason Index score to track altcoin dominance shifts, and BTC dominance metrics to detect capital flows between Bitcoin and alts. All this was compiled client-side in JS on GitHub Pages, with Lightweight Charts for interactive visualization, ensuring the index reflects liquidity, sentiment, and multi-asset correlations in a single line.</p>
-        <p><strong>What Makes This Chart Accurate for Predicting Tops?</strong><br>
-        What makes this chart so accurate for predicting market tops is its multi-faceted fusion of data, including crypto prices, metals as hedges, the Fear and Greed Index for sentiment extremes, Google search volume for public hype (e.g., surging "crypto" queries signaling euphoria), the Altseason Index for altcoin blow-offs, and BTC dominance to spot rotation out of Bitcoin—creating a comprehensive flow cycle model that's backtested on 2017–2022 tops/bottoms with 90% accuracy. Unlike single-metric charts, it compiles these signals into one line that forecasts blow-offs at 95+ levels, outperforming RSI or MACD by incorporating macro flows, sentiment, and dominance shifts for early warnings, like spotting 2021's top at 90 amid similar altseason and fear/greed patterns.</p>
-        <p style="font-size:0.9em; color:#8b949e;">Disclaimer: Not financial advice — markets are irrational, always DYOR.</p>
       </div>
     </div>
     <div class="sidebar">
@@ -180,8 +172,8 @@
         scales: {
           x: {
             type: 'time',
-            time: { unit: 'month', displayFormats: { month: 'MMM yy' }, tooltipFormat: 'MMMM yyyy' },
-            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12, source: 'auto' },
+            time: { unit: 'month', displayFormats: { month: 'MMM yyyy' }, tooltipFormat: 'MMMM yyyy' },
+            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 24 },
             title: { display: true, text: 'Time' }
           },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
@@ -222,13 +214,9 @@
               }
             }
           }
-        },
-        onResize: () => chart.update()  // Force update on resize
+        }
       }
     });
-
-    // Force chart resize on window load/resize
-    window.addEventListener('resize', () => chart.resize());
 
     async function updateDynamicIndexAndUI() {
       try {
@@ -401,10 +389,6 @@
       updateDynamicIndexAndUI();
       fetchDailySummary();
     }, 60000);
-
-    // Force chart resize on load
-    window.addEventListener('load', () => chart.resize());
-    window.addEventListener('resize', () => chart.resize());
   </script>
 </body>
 </html>
