--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
         target = 51 + (95 - 51) * progress;
       } else {
         const progress = (i - peakIdx) / (endIdx - peakIdx);
-        target = 95 - (95 - 10) * progress;
+        // Downtrend: start at Complacency (80-90), then drop to Depression (~10)
+        target = 85 - (85 - 10) * progress; // Jump to Complacency range first, then decline
       }
-      target += Math.sin(i * 0.4) * 4 - 2;
+      target += Math.sin(i * 0.4) * 4 - 2; // gentle variation
       predictionMonthly[i] = Math.max(5, Math.min(100, Math.round(target)));
     }
 
@@ -143,23 +144,64 @@
       data: {
         labels: monthlyDates,
         datasets: [
-          { label: 'Flow Cycle Index (Historical)', data: historicalMonthly, borderColor: '#58a6ff', backgroundColor: 'rgba(88,166,255,0.15)', fill: true, tension: 0.3, pointRadius: 0, borderWidth: 2 },
-          { label: 'Predicted Index (2-Year Forecast)', data: predictionMonthly, borderColor: '#8b949e', backgroundColor: 'rgba(139,148,158,0.1)', borderDash: [6, 4], fill: true, tension: 0.3, pointRadius: 0, borderWidth: 2 }
+          {
+            label: 'Flow Cycle Index (Historical)',
+            data: historicalMonthly,
+            borderColor: '#58a6ff',
+            backgroundColor: 'rgba(88,166,255,0.15)',
+            fill: true,
+            tension: 0.3,
+            pointRadius: 0,
+            borderWidth: 2
+          },
+          {
+            label: 'Predicted Index (2-Year Forecast)',
+            data: predictionMonthly,
+            borderColor: '#8b949e',
+            backgroundColor: 'rgba(139,148,158,0.1)',
+            borderDash: [6, 4],
+            fill: true,
+            tension: 0.3,
+            pointRadius: 0,
+            borderWidth: 2
+          }
         ]
       },
       options: {
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-          x: { type: 'time', time: { unit: 'month', displayFormats: { month: 'MMM yyyy' }, tooltipFormat: 'MMMM yyyy' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 24 }, title: { display: true, text: 'Time' } },
+          x: {
+            type: 'time',
+            time: { unit: 'month', displayFormats: { month: 'MMM yyyy' }, tooltipFormat: 'MMMM yyyy' },
+            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 24 },
+            title: { display: true, text: 'Time' }
+          },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
           zoom: { zoom: { enabled: false }, pan: { enabled: false } },
           annotation: {
             annotations: {
-              topBox: { type: 'box', xMin: new Date(2026, 6, 1), xMax: new Date(2026, 9, 1), yMin: 85, yMax: 100, backgroundColor: 'rgba(255,107,107,0.15)', borderColor: '#ff6b6b', borderWidth: 2, label: { content: 'Predicted Blow-Off', enabled: true, position: 'center', backgroundColor: 'rgba(255,0,0,0.7)', color: 'white' } },
-              bottomLabel: { type: 'label', xValue: new Date(2025, 10, 1), yValue: 10, content: 'Recent Bottom', backgroundColor: '#22c55e', color: 'white' }
+              topBox: {
+                type: 'box',
+                xMin: new Date(2026, 6, 1),
+                xMax: new Date(2026, 9, 1),
+                yMin: 85,
+                yMax: 100,
+                backgroundColor: 'rgba(255,107,107,0.15)',
+                borderColor: '#ff6b6b',
+                borderWidth: 2,
+                label: { content: 'Predicted Blow-Off (Euphoria)', enabled: true, position: 'center', backgroundColor: 'rgba(255,0,0,0.7)', color: 'white' }
+              },
+              bottomLabel: {
+                type: 'label',
+                xValue: new Date(2025, 10, 1),
+                yValue: 10,
+                content: 'Recent Bottom (Depression)',
+                backgroundColor: '#22c55e',
+                color: 'white'
+              }
             }
           },
           tooltip: {
@@ -168,7 +210,7 @@
             callbacks: {
               label: ctx => {
                 const v = ctx.raw;
-                let phase = v < 20 ? 'Panic/Capitulation' : v < 40 ? 'Disbelief/Hope' : v < 60 ? 'Belief/Optimism' : v < 80 ? 'Thrill' : 'Euphoria';
+                let phase = v < 20 ? 'Depression (Bottom)' : v < 40 ? 'Panic/Anger' : v < 60 ? 'Disbelief/Hope' : v < 80 ? 'Optimism/Belief' : v < 90 ? 'Complacency/Thrill' : 'Euphoria (Top)';
                 return `${ctx.dataset.label}: ${v?.toFixed(0) || 'N/A'} (${phase})`;
               }
             }
@@ -208,12 +250,14 @@
 
         const badge = document.getElementById('statusBadge');
         badge.innerHTML = `🟡 ${currentPhase.toUpperCase()}`;
-        badge.style.background = currentIndex >= 90 ? '#ef4444' : currentIndex >= 70 ? '#eab308' : currentIndex >= 50 ? '#f59e0b' : '#22c55e';
+        badge.style.background = currentIndex >= 95 ? '#ef4444' : currentIndex >= 85 ? '#f59e0b' : currentIndex >= 70 ? '#eab308' : currentIndex >= 50 ? '#f59e0b' : '#22c55e';
 
         let advice = 'Hold or buy dips';
-        if (currentPhase === 'Euphoria' || currentPhase === 'Thrill') advice = 'Trim/Sell strength — euphoria alert';
+        if (currentPhase === 'Euphoria') advice = 'Trim/Sell strength — euphoria alert';
+        else if (currentPhase === 'Thrill') advice = 'Hold tight — FOMO building';
         else if (currentPhase === 'Panic' || currentPhase === 'Capitulation' || currentPhase === 'Depression') advice = 'Load bags heavy — bottom vibes';
         else if (currentPhase === 'Hope' || currentPhase === 'Belief' || currentPhase === 'Optimism') advice = 'Accumulate dips — legs building';
+        else if (currentPhase === 'Complacency' || currentPhase === 'Anxiety' || currentPhase === 'Denial') advice = 'Watch for capitulation — early bottom signals';
         document.getElementById('actionAdvice').innerHTML = `What you should do right now: ${advice}`;
       } catch (e) {
         console.log('Dynamic update failed');
@@ -252,17 +296,14 @@
       div.innerHTML = '<div class="loading">Loading live prices...</div>';
 
       try {
-        const res = await fetch('https://api.binance.com/api/v3/ticker/24hr?symbols=["BTCUSDT","ETHUSDT","SOLUSDT","BNBUSDT"]');
-        if (!res.ok) throw new Error('Binance error');
+        const res = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h');
+        if (!res.ok) throw new Error('CoinGecko error');
         const data = await res.json();
         div.innerHTML = '';
-        const symbols = ['Bitcoin', 'Ethereum', 'Solana', 'BNB'];
-        data.forEach((c, idx) => {
-          const price = parseFloat(c.lastPrice).toLocaleString();
-          const change = parseFloat(c.priceChangePercent).toFixed(2);
+        data.forEach(c => {
           const p = document.createElement('div');
           p.className = 'price-item';
-          p.innerHTML = `<strong>${symbols[idx]}</strong><br><span style="font-size:1.4em;">$${price}</span> <span style="color:${change >= 0 ? '#56d364' : '#f85149'};">${change}%</span>`;
+          p.innerHTML = `<strong>${c.name}</strong><br><span style="font-size:1.4em;">$${c.current_price.toLocaleString()}</span> <span style="color:${c.price_change_percentage_24h >= 0 ? '#56d364' : '#f85149'};">${c.price_change_percentage_24h?.toFixed(2) || 'N/A'}%</span>`;
           div.appendChild(p);
         });
       } catch (err) {
